# garthim_ws

./: README.md
garthim_ws/src/: README.md
garthim_ws/src/TargetMark5/: model.config  model.sdf
garthim_ws/src/critic/: CMakeLists.txt  package.xml  sarsa_lambda_plugin.xml  sarsa_plugin.xml
garthim_ws/src/critic/include/critic/: critic.h  sarsa.h  true_online_sarsa.h
garthim_ws/src/critic/launch/: sarsa_test.test
garthim_ws/src/critic/src/: critic_node.cpp
garthim_ws/src/critic/src/critic/: sarsa.cpp  true_online_sarsa.cpp
garthim_ws/src/critic/test/: gtest_main.cpp
garthim_ws/src/critic/test/critic/: sarsa_test.cpp
garthim_ws/src/crumb/crumb_gazebo/: CMakeLists.txt
garthim_ws/src/crumb/crumb_gazebo/launch/: crumb_explotation.launch  crumb_world.launch  empty_world.launch  turtlebot_world.launch
garthim_ws/src/crumb/crumb_gazebo/worlds/: crumbEmpty.world  crumb_NO_walls_L.world  crumb_learning.world  crumb_walls.world  crumb_walls_L.world  crumb_walls_no_obstacles.world  crumb_walls_one_obstacle.world  crumb_walls_populated.world  crumb_walls_three_obstacles.world  empty_targetmark5.world  playground.world  small_25_wall.world  small_25_wall_hope.world
garthim_ws/src/crumb/crumb_home/: CMakeLists.txt
garthim_ws/src/crumb/crumb_listener/: CMakeLists.txt
garthim_ws/src/crumb/crumb_listener/src/: crumb_listener_gazebo.cpp
garthim_ws/src/decider/: CMakeLists.txt  boltzmann_correction_plugin.xml  egreedy_plugin.xml  loop_evasion_plugin.xml  max_policy_plugin.xml  multiple_temperatures_plugin.xml  package.xml
garthim_ws/src/decider/include/decider/: decider.h  (+6 more)
garthim_ws/src/decider/src/: decider_node.cpp
garthim_ws/src/docs/: connecting_codeblock_with_a_ros_node.txt  rosrun_teleop.txt  using_futures.txt
garthim_ws/src/file_recorder/: CMakeLists.txt  package.xml
garthim_ws/src/file_recorder/cmake-older/: FindMatlab.cmake
garthim_ws/src/file_recorder/src/: file_recorder_node.cpp
garthim_ws/src/model_interface/: CMakeLists.txt  package.xml  tm_plugin.xml
garthim_ws/src/model_interface/src/: model_interface_node.cpp
garthim_ws/src/navigation_interface/: CMakeLists.txt  package.xml  ti_plugin.xml
garthim_ws/src/navigation_interface/include/navigation_interface/: navigation_interface.h  target_generator.h  target_generator_fixed.h  target_generator_inside_region.h  target_generator_inside_region_fixed.h  target_generator_scaffolder.h  target_generator_simple_obstacle.h  translator_action_to_twist.h  translator_to_state.h
garthim_ws/src/navigation_interface/launch/: navigation_interface_test.test  translator_pose_to_state_test.test  translator_scan_to_state_test.test
garthim_ws/src/navigation_interface/src/: scanner_node_test.cpp
garthim_ws/src/navigation_interface/src/navigation_interface/: navigation_interface.cpp  target_generator.cpp  target_generator_fixed.cpp  target_generator_inside_region.cpp  target_generator_inside_region_fixed.cpp  target_generator_scaffolder.cpp  target_generator_simple_obstacle.cpp  translator_action_to_twist.cpp  translator_to_state.cpp
garthim_ws/src/navigation_interface/test/: gtest_main.cpp
garthim_ws/src/navigation_interface/test/navigation_interface/: navigation_interface_test.cpp  translator_pose_to_state_test.cpp  translator_scan_to_state_test.cpp
garthim_ws/src/regulator/regulator/: CMakeLists.txt  package.xml
garthim_ws/src/regulator/regulator_client/: CMakeLists.txt  package.xml
garthim_ws/src/regulator/regulator_interface/: CMakeLists.txt  package.xml
garthim_ws/src/reward/: CMakeLists.txt  package.xml  reward_action_plugin.xml  reward_action_scanner_plugin.xml  reward_plugin.xml  reward_scanner_plugin.xml
garthim_ws/src/reward/launch/: reward_action_test.test  reward_state_test.test
garthim_ws/src/reward/src/: reward_node.cpp
garthim_ws/src/reward/test/: gtest_main.cpp
garthim_ws/src/rl_gazebo/: CMakeLists.txt  package.xml
garthim_ws/src/rl_gazebo/src/: rl_gazebo_node.cpp
garthim_ws/src/rl_metrics/: CMakeLists.txt  package.xml
garthim_ws/src/rl_metrics/src/: rl_metrics.cpp  rl_metrics_node.cpp
garthim_ws/src/rl_metrics/test/: gtest_main.cpp  rl_metrics_test.cpp
garthim_ws/src/rl_missions/: CMakeLists.txt  package.xml
garthim_ws/src/rl_missions/launch/: empty.launch  empty_DLE.launch  empty_egreedy.launch  empty_exploitation.launch  empty_no_loop.launch  empty_sarsa_old.launch  empty_time.launch  empty_time_exploitation.launch  obstacles.launch  obstacles_L.launch  obstacles_L_1_ped.launch  obstacles_L_1_ped_exploitation.launch  obstacles_L_1_ped_open.launch  obstacles_L_1_ped_open_exploitation.launch  obstacles_L_2_ped.launch  obstacles_L_2_ped_open.launch  obstacles_L_exploitation.launch  obstacles_exploitation.launch  obstacles_exploitation_model.launch  obstacles_model.launch  obstacles_noqini.launch  obstacles_pedsim.launch  obstacles_pedsim_exploitation.launch  obstacles_time.launch  obstacles_time_exploitation.launch  obstacles_time_exploitation_model.launch  obstacles_time_model.launch  obstacles_time_pedestrian.launch  obstacles_time_pedestrian_exploitation.launch  real_obstacles.launch  scanner_test.launch
garthim_ws/src/rl_missions/rviz/: scanner_test.rviz  scanner_test_pedsim.rviz
garthim_ws/src/rl_missions/src/: rl_starter.cpp
garthim_ws/src/rl_missions/worlds/: crumb_learning.world  turtle.world
garthim_ws/src/rl_msgs/: CMakeLists.txt  package.xml
garthim_ws/src/rl_msgs/action/: AgentAction.action
garthim_ws/src/rl_msgs/msg/: DeciderInput.msg  RLVariable.msg  State.msg  TransitionResult.msg
garthim_ws/src/rl_msgs/srv/: ChangeReward.srv  GetRandom.srv  GetReward.srv  GetSubMatrix.srv  UnwrapState.srv
garthim_ws/src/robot_interface/: CMakeLists.txt  package.xml
garthim_ws/src/robot_interface/launch/: gazebo_interface.launch  gazebo_interface_test.test  world_discrete_test.test
garthim_ws/src/robot_interface/src/: gazebo_interface_node.cpp
garthim_ws/src/robot_interface/test/: gtest_main.cpp
garthim_ws/src/test_movement/: CMakeLists.txt  package.xml
garthim_ws/src/test_movement/src/: test_movement_fran.cpp  test_movement_mario.cpp
(+62 files in other folders)
